2.0b1:
	Fix build problem on IPv6 disabled systems.
	Fix build problem with libpsf
	Fix rc-redhat startup order, drop root before starting the daemon
	Updated .spec file (Ivan F. Martinez)
1.7.5:
	Documentation fixes (Gary Aitken, Per Holm)
	New broken site in the default whitelist
	Generate .spec file from configure
	Differentiate errors in dump file and config file
	Fix a build problem if getaddrinfo is absent (Lev Walkin)
	Don't sync with local addresses on FreeBSD 4.9 (Lev Walkin)
	Add a commented line for ::1 whitelisting in greylist.conf
	Delayed reject to cope better with sender callback (Moritz Both)
1.7.4:
	M4 file for easier sendmail.cf generation (Ivan F. Martinez)
	.spec file for generating RPM (Ivan F. Martinez)
	Install ${DESTDIR}etc/mail for sandbox builds
	Fix build problem
1.7.3:
	SUSe startup script, by Stephane Lentz
	Builds again with SPF enabled
	Update doc: flex is required
	Prefix all install paths by ${DESTDIR} to help sandbox builds for RPM
	Pull config from /etc/sysconfig/milter-greylist in rc-rdehat.sh
	Whitelist when sendmail sets ${greylist} to WHITE (Ivan F. Martinez)
1.7.2:
	Support libspf2 (Eugene Crosser)
	New ACL framework for whitelist and greylist (Remy Card)
	Tell MX peers about autowhitelist prolongation (Remy Card)
	Documentation cleanup
	Update the Broken MTA list
1.7.1:
	Null after 1.6 tag release to help patch contributions
1.6:
	New stable branch
	Missing flags in milter-greylist usage display
	Gentoo startup sript (Stephane Lentz)
	rc-linux.sh was renamed rc-redhat.sh
1.5.12:
	More broken servers in the default config file
	Fix wrong sync queue counter computations (Attila Bruncsak)
	Add a -c option to just check the config and exit (Klas Heggemann)
1.5.11:
	Don't block threads while reloading config (Attila Bruncsak)
	Allow regex with # in the configuration (Hajimu Umemoto)
	Ignore self as sync peer (Matthias Scheler and Hajimu Umemoto)
	Document ressource shortage for memory and file descriptor