@@ -1,4 +1,5 @@
 2.0b1:
+	Use initgroups() on startup to kill suplementary groups
 	Fix build problem on IPv6 disabled systems.
 	Fix build problem with libpsf
 	Fix rc-redhat startup order, drop root before starting the daemon
